--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </li>
       </ol>
     </div>
-<div class="col-md-2 col-5 col-sm-10 m-auto mt-5 ps-4 ">
+<div class="col-md-2 col-7 m-auto mt-5 ps-4 ">
   <a href="https://www.facebook.com/" target="_blank" class="m-2"><img src="images/icon-facebook.svg" alt="" class="icon"></a>
   <a href="https://www.instagram.com/" target="_blank"class="m-2"><img src="images/icon-instagram.svg" alt=""></a>
   <a href="https://www.twitter.com/" target="_blank"class="m-2"><img src="images/icon-twitter.svg" alt=""></a>
