--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
           <button class="navbar-toggler"data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse naving" id="navbarSupportedContent">
+           <div id="narr"></div>
+          <div class="collapse navbar-collapse naving mt-5" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto ">
               <li class="nav-item me-md-4 px-md-2 mx-auto">
                 <a class="nav-link" href="#">About</a>
