--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav class="navbar navbar-expand-md navbar-dark ">
         <div class="container-fluid">
 <img src="images/logo.svg" alt="logo">
-          <button class="navbar-toggler"data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" >
+          <button id="bu" class="navbar-toggler"data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" >
             <span class="navbar-toggler-icon"></span>
           </button>
            <div id="narr"></div>
