--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
            <div id="narr"></div>
-          <div class="collapse navbar-collapse naving mt-5" id="navbarSupportedContent">
+          <div class="collapse navbar-collapse naving mt-md-5 mt-5" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto ">
               <li class="nav-item me-md-4 px-md-2 mx-auto">
                 <a class="nav-link" href="#">About</a>
